测试输出流和错误流

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Linux测试demo</title>
+    <script src="/js/index.js"></script>
 </head>
 <body>
 <form name="fm" action="/testLinux">
     <input name="cmd">
-    <button type="submit">执行</button>
+    <button id="test1" onclick="exec1()">执行</button>
+    <button id="test2" onclick="exec2()">执行2</button>
 </form>
 </body>
 </html>
